ok i fixed most of the things, including the footer being absent on two pages, but it's still not responsive.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,10 @@ a {
     color: #e84c3d;
     margin-bottom: 3%; }
   #members p {
-    margin-bottom: 10%; }
+    margin-bottom: 10%;
+    margin-right: 5%;
+    font-size: 1.28em;
+    text-align: center; }
 
 #resources {
   display: block;
@@ -169,8 +172,9 @@ a {
     width: 100%; }
 
 .member-map {
-  height: 400px;
-  width: 100%; }
+  height: 500px;
+  width: 100%;
+  padding: 5%; }
 
 .member-links {
   padding-top: 2%;
@@ -185,6 +189,12 @@ a {
 
 .btn {
   font-weight: bold; }
+
+.form-inline {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  text-align: center;
+  padding: 5%; }
 
 #techTeam {
   background-image: url("../img/members/techteam.jpg");
