--- a/assets/sass/_members.scss
+++ b/assets/sass/_members.scss
@@ -13,8 +13,9 @@
 }
 
 .member-map {
-    height: 400px;
+    height: 500px;
     width: 100%;
+    padding: 5%;
 }
 
 .member-links {
@@ -33,6 +34,13 @@
 
 .btn {
     font-weight: bold;
+}
+
+.form-inline {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  text-align: center;
+  padding: 5%;
 }
 
 #techTeam {
